--- a/web3/ef-pila-coin-bep20-hardhat/package.json
+++ b/web3/ef-pila-coin-bep20-hardhat/package.json
@@ -7,6 +7,7 @@
     "start": "npx hardhat node",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
+    "deploy:script": "npx hardhat run scripts/deploy.ts --network bsctest",
     "deploy:dev": "npx hardhat ignition deploy ignition/modules/PilaCoin.ts --network local",
     "deploy:prod": "npx hardhat ignition deploy ignition/modules/PilaCoin.ts --network sepolia"
   },
@@ -15,9 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.3",
     "hardhat": "^2.26.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0"
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8"
   }
 }
